--- a/src/componets/css/Categorias.css
+++ b/src/componets/css/Categorias.css
@@ -18,7 +18,7 @@
     height: 100px;
     text-align: center;
     font-size: 18px;
-    background: #444;
+    border: 1px solid #ccc;
 
     /* Center slide text vertically */
     display: flex;
